# react-native-sia

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Sia.podspec  eslint.config.mjs  knope.toml  package.json  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
.changeset/: five-facts-punch.md  mean-dogs-attend.md  restore-armeabi-v7a.md  sdk-update.md  update-sdk-adaptive-racing.md
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/generate-bindings/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: check-sdk-update.yml  ci.yml  knope-release.yml  prepare-release.yml  release-main.yml
SiaFramework.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/sia/: SiaModule.kt  SiaPackage.kt
cpp/: react-native-sia.cpp  react-native-sia.h
example/: CHANGELOG.md  app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/sia/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/SiaExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SiaExample.xcodeproj/: project.pbxproj
example/ios/SiaExample.xcodeproj/xcshareddata/xcschemes/: SiaExample.xcscheme
example/ios/SiaExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  Gallery.tsx  Hosts.tsx  LogView.tsx  PhotoDetail.tsx  PhotoStatusBadge.tsx  Toast.tsx  Upload.tsx  UploadStatusIcon.tsx  settingsContext.tsx  uploadToSia.ts  useApp.tsx
example/src/navigation/: types.ts
example/src/screens/: HomeScreen.tsx  HostDetailScreen.tsx  HostsScreen.tsx  IndexerScreen.tsx  PhotoDetailScreen.tsx  SettingsHomeScreen.tsx
ios/: Sia.h  Sia.mm
rust/: Cargo.toml
rust/examples/: test.rs
rust/src/: lib.rs  logger.rs
rust/src/api/: simple.rs
scripts/: create-release-pr.mjs  format-package.mjs
sia-sdk/: Cargo.toml
sia-sdk/src/api/: simple.rs
src/: NativeSia.ts  index.tsx  public.ts
