[package]
name = "sia_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
anyhow = "1.0.99"
quinn = "0.11.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
serde_json = "1.0.142"
indexd = { git="https://github.com/siafoundation/sia-sdk-rs", rev="a9c91bf5f06361241ee52c1aa350e8fceeed42f1" }
sia_sdk = { git="https://github.com/siafoundation/sia-sdk-rs", rev="a9c91bf5f06361241ee52c1aa350e8fceeed42f1" }
tokio= { version = "^1.47.1", features = ["rt-multi-thread", "macros", "time", "net"] }
uniffi = "0.29.4"
thiserror = "1.0.64"
log = "0.4.28"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
