[package]
name = "sia_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
anyhow = "1.0.99"
quinn = "0.11.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
serde_json = "1.0.142"
indexd = { git="https://github.com/siafoundation/sia-sdk-rs", rev="459e46ec454be8a3960d427948146ddbf0a94be0" }
sia_sdk = { git="https://github.com/siafoundation/sia-sdk-rs", rev="459e46ec454be8a3960d427948146ddbf0a94be0" }
tokio= { version = "^1.47.1", features = ["rt-multi-thread", "macros", "time", "net", "rt"] }
uniffi = { version = "0.29.4", features = ["tokio"] }
thiserror = "1.0.64"
log = "0.4.28"
hex = "0.4.3"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
