[package]
name = "rust_lib_files"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
quinn = "0.11.8"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
serde_json = "1.0.142"
sia_sdk = { git = "https://github.com/SiaFoundation/sia-sdk-rs", rev = "766f9bc" }
tokio= "^1.47.1"
uniffi = "0.29.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
